--- a/goPointOfSale/Templates/index.html
+++ b/goPointOfSale/Templates/index.html
@@ -252,14 +252,14 @@
 						<!-- Destination -->
 						<div class="destination item">
 							<div class="destination_image">
-								<img src="{{baseUrl}}/{{dest.image}}" alt="">
+								<img src="{{dest.image.url}}" alt="">
 								{% if dest.offer == True %}
 									<div class="spec_offer text-center"><a href="#">Special Offer</a></div>
 								{% endif %}
 							</div>
 							<div class="destination_content">
 								<div class="destination_title"><a href="destinations.html">{{dest.name}}</a></div>
-								<div class="destination_subtitle"><p>{{dest.desc}}</p></div>
+								<div class="destination_subtitle"><p>{{dest.description}}</p></div>
 								<div class="destination_price">From ${{dest.price}}</div>
 							</div>
 						</div>
